# mason

./: .travis.yml  CHANGELOG.md  LICENSE  README.md  mason.cabal
.github/workflows/: haskell.yml
benchmarks/: bintree.hs  cabal.project  mason-benchmarks.cabal
benchmarks/aeson/: Bstr.hs  Fast.hs  HashMapExts.hs  Mason.hs  json-weigh.hs  main.hs  template.hs  twitter100-mangled.json
cbits/: dtoa.c
src/Mason/: Builder.hs
src/Mason/Builder/: Compat.hs  Dynamic.hs  Internal.hs
