cabal-version:       2.4

name:                mason
version:             0.1
synopsis:            Fast and extensible bytestring builder
description:         See README.md
bug-reports:         https://github.com/fumieval/mason/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Fumiaki Kinoshita
maintainer:          fumiexcel@gmail.com
copyright:           2019 Fumiaki Kinoshita, Don Stewart 2005-2009, Duncan Coutts 2006-2015, David Roundy 2003-2005, Jasper Van der Jeugt 2010, Simon Meier 2010-2013, Ben Gamari 2017
category:            Data
extra-source-files:  CHANGELOG.md, README.md
tested-with:         GHC == 8.6.5, GHC==8.8.1

library
  exposed-modules:
    Mason.Builder
    Mason.Builder.Internal

  c-sources: cbits/dtoa.c
  ghc-options: -Wall -O2
  build-depends:       base >= 4.12.0.0 && <5
    , bytestring
    , text
    , network >= 2.7 && <3.2
    , integer-gmp
    , ghc-prim
  hs-source-dirs: src
  default-language:    Haskell2010
